--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">LinkIt Remote</string>
-    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting Bluetooth Advertisements.</string>
+    <string name="bt_not_enabled_leaving">User declined to enable Bluetooth, exiting app.</string>
     <string name="activity_main_title">Nearby Devices</string>
     <string name="bt_not_supported">Bluetooth is not supported on this device.</string>
     <string name="refresh">Refresh</string>
@@ -20,8 +20,8 @@
     <string name="hours_ago">hours ago</string>
     <string name="empty_list">No devices found - refresh to try again.</string>
     <string name="seconds">seconds.</string>
-    <string name="scan_start_toast">Scanning for</string>
-    <string name="already_scanning">Scanning already started.</string>
+    <string name="scan_start_toast">Scanning for nearby devices</string>
+    <string name="already_scanning">Scanning already started</string>
     <string name="scan_btn_text">Scan</string>
     <string name="no_name">(no name)</string>
     <string name="start_error_unknown">unknown error</string>
