--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="no_name">(no name)</string>
     <string name="start_error_unknown">unknown error</string>
     <string name="device_disconnected">Remote device disconnected. Tap refresh to connect again.</string>
+    <string name="protocol_mismatch">Incompatible LRemote version. Please upgrade to version v0.9.6 or later.</string>
     <string name="permission_denied">Bluetooth scan permission denied - exit.</string>
 
 </resources>
